Fix overflow style by Y for all pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body {
     /*width: 100vw;*/
     /*height: 100vh;*/
     overflow-x: hidden;
-    overflow-y: hidden;
+    overflow-y: auto;
     /* background-color: teal; */
     /* background-color: #7b917b; */
     background-image: linear-gradient(#47FFFF, #FF85F9 );
